# smartsepsis

./: .gitignore  404.html  AUTORESEARCH_DGX_RESULTADOS.md  CHANGELOG.md  CITATION.cff  COLABFOLD.md  CONTRIBUTING.md  MELHORIAS.md  MELHORIAS_v2.md  MIGRATION.md  PIVOT.md  README.md  TODO.md  colabfold_missing.fasta  config.py  conservation_analysis.py  index.html  jv_rode_aqui.md  mkdocs.yml  nanofold_benchmark.py  objects.inv  phenotype_probe.py  phenotype_probe_v2.py  presentation.html  protein_distance_matrix.py  protein_scoring.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_batch.py  sitemap.xml  targets_brazil.csv  targets_brazil_variants.csv  tracking.py
.github/workflows/: docs.yml
alphafold3_submission/: README.md  cas12a_lba_protein.fasta  top5_mecA_crRNAs.fasta
alphafold3_submission/targets/: SUMMARY.tsv  target_dsDNA_mecA-0.fasta  target_dsDNA_mecA-1.fasta  target_dsDNA_mecA-2.fasta
citing/: index.html
contributing/: index.html
data/reproducibility/: index.html
disclaimers/: index.html
docs/: citing.md  contributing.md  disclaimers.md  index.md
docs/data/: library.md  reproducibility.md
docs/methods/: guide-design.md  multiplex.md  pipeline-overview.md  scoring.md  specificity.md  structural.md
docs/project/: overview.md  partners.md  roadmap.md  team.md
methods/guide-design/: index.html
methods/multiplex/: index.html
methods/pipeline-overview/: index.html
methods/scoring/: index.html
methods/specificity/: index.html
methods/structural/: index.html
preprint/: draft_v0.md  scoping_review_protocol.md  scoping_review_search_strategy.md  scoping_review_skeleton.md
project/overview/: index.html
project/partners/: index.html
project/roadmap/: index.html
project/team/: index.html
public/: benchmarks.html  dashboard.html  index.html  lang.js  nav.css  pangenome.html  paper.html  portfolio.css  portfolio.html  sequenciar-em-casa.html  smartwetlab.html  structure.html  targets.html  tier2.html
public/data/: benchmark_summary.json  panaroo_distribution.json  phenotype_metrics.json  phenotype_predictions.json  portfolio_summary.json  protein_distances_all.json  protein_scores.json  structure_features.json
results_dgx/: .gitkeep  dashboard.html  presentation.html  task_v6_B.py  task_v6_C.py  task_v6_K.py  task_v6_L.py  task_v6_O.py
results_dgx/autoresearch_results/: card_enrichment.html  task_1.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py  task_v5_B.py  task_v5_C.py  task_v5_D.py  task_v5_E.py  task_v5_F.py  task_v5_H.py  task_v5_K.py  task_v5_L.py  task_v5_O.py
rtx5090/scoping_review/: README.md  requirements.txt
rtx5090/scoping_review/scripts/: 01_fetch_searches.py  02_dedup.py  03_screen.py  04_extract.py  05_synthesize.py
scripts/: README_stress_test.md  setup_stress_test_databases.sh  stress_test_specificity.py
search/: search_index.json
src/bac_end_harvard/: __init__.py
tests/: test_smoke.py
