[project]
name = "bac-end-harvard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "João Victor", email = "jvictordias@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "biopython>=1.87",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
